--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
+    "@apollo/react-hooks": "^4.0.0",
+    "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
     "expo-status-bar": "~1.0.2",
+    "graphql": "^15.3.0",
+    "graphql-anywhere": "^4.2.7",
+    "graphql-tag": "^2.11.0",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-maps": "0.27.1",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.1",
