--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "^10.2.1",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.6",
@@ -27,6 +28,7 @@
     "graphql-anywhere": "^4.2.7",
     "graphql-tag": "^2.11.0",
     "lottie-react-native": "~2.6.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
