--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "prettier": "prettier --write \"**/*.js\"",
-    "precommit": "lint-staged"
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -57,6 +57,11 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
