feat(): misc views...

--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write \"**/*.js\"",
-      "git add"
+      "prettier --write \"**/*.js\""
     ]
   },
   "repository": {
