--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
+    "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "apollo-cache-inmemory": "^1.6.6",
@@ -23,6 +24,9 @@
     "apollo-link-http": "^1.5.17",
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
+    "expo-blur": "~8.2.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-location": "~9.0.0",
     "expo-status-bar": "~1.0.2",
     "graphql": "^15.3.0",
     "graphql-anywhere": "^4.2.7",
@@ -33,7 +37,6 @@
     "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-maps": "0.27.1",
@@ -41,6 +44,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.8.4"
