--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.key
 *.mobileprovision
 *.orig.*
+.vscode
+.idea
 web-build/
 
 # macOS
@@ -15,6 +17,7 @@ web-build/
 node_modules/**/*
 package-lock.json
 npm-debug.*
+yarn.lock
 
 #env
 .env
