--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.8.4",
-    "yarn": "^1.22.10"
+    "@react-native-community/slider": "3.0.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
