--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@apollo/react-hooks": "^4.0.0",
+    "@expo-google-fonts/comfortaa": "^0.1.0",
+    "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.7.6",
@@ -25,6 +28,7 @@
     "expo": "^39.0.4",
     "expo-av": "~8.6.0",
     "expo-blur": "~8.2.0",
+    "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-location": "~9.0.0",
     "expo-status-bar": "~1.0.2",
@@ -39,6 +43,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
@@ -48,7 +53,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.8.4",
-    "@react-native-community/slider": "3.0.3"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
