--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.8.4",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "react-native-safe-area-context": "3.1.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
